# RubikCube

./: CMakeLists.txt
assets/shaders/: colored.frag  colored.vert
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: GUI.hpp  Game.cpp  Game.hpp  Utils.hpp  main.cpp
src/assets/: Assets.hpp
src/components/: Animation.hpp  Collision.hpp  Transform.hpp
src/objects/: Camera.hpp  Piece.hpp  Raycast.hpp  RubikCube.hpp  TestCorner.hpp
src/renderer/: Quad.hpp  RenderData.hpp  Renderable.hpp  Shaders.hpp
